operate two numbers only [v1.1]

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     </header>
 
     <div class = "calculatorBody">
-        <div class = screen>screen</div>
+        <div class = screen>
+            <input type="text" id="screen" disabled />
+          </div>
         <button class = 'btn'>1</button>
         <button class = 'btn'>2</button>
         <button class = 'btn'>3</button>
@@ -30,7 +32,7 @@
         <button id = 'x' class = 'operator'>x</button>
         <button id = '/' class = 'operator'>/</button>
         <button id = 'ac' class = 'operator'>AC</button>
-        <button id = 'equal' class = 'operator'> Equal </button>
+        <button id = 'equal' class = 'operator'>=</button>
     </div>
 
     <footer>
