--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
     </header>
 
     <div class = "calculatorBody">
-        <div class = screen>
-            <input type="text" id="screen" disabled />
-          </div>
-        <button class = 'btn'>1</button>
-        <button class = 'btn'>2</button>
-        <button class = 'btn'>3</button>
-        <button class = 'btn'>4</button>
-        <button class = 'btn'>5</button>
-        <button class = 'btn'>6</button>
+        <input type="text" id="screen" disabled />
+        <button id = 'ac' >AC</button>
+
+        <div class = 'num top'>
         <button class = 'btn'>7</button>
         <button class = 'btn'>8</button>
         <button class = 'btn'>9</button>
+        <button class = 'btn'>4</button>
+        <button class = 'btn'>5</button>
+        <button class = 'btn'>6</button>
+        <button class = 'btn'>1</button>
+        <button class = 'btn'>2</button>
+        <button class = 'btn'>3</button>
+        </div>
+    
         <button class = 'btn'>0</button>
         <button class = 'btn'>00</button>
         <button id = "+" class = 'operator'>+</button>
         <button id = "-" class = 'operator'>-</button>
         <button id = 'x' class = 'operator'>x</button>
         <button id = '/' class = 'operator'>/</button>
-        <button id = 'ac' class = 'operator'>AC</button>
         <button id = 'equal' class = 'operator'>=</button>
     </div>
 
