--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class = top-btn>
                 <button class = 'topstf' id = 'ac' >AC</button>
-                <button class = 'topstf' id = 'delete'>Delete</button>
+                <button class = 'topstf' id = 'delete'>&#9003</button>
             </div>
             <div class = 'num top'>
                 <button class = 'btn'>7</button>
