--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
     <header>
-        <h1>Calculator</h1>
+        <h1>+ - * / % & $ # </h1>
     </header>
 
     <div class = main>
         <div class = "calculatorBody">
             <div class = 'screen'>
-                <input type="text" id="screen" disabled />
+                <div class = 'scr' id="pScreen"></div>
+                <div class = 'scr' id="cScreen" >0</div>
             </div>
             <div class = top-btn>
-                <button class = 'topstf' id = 'ac' >AC</button>
+                <button class = 'topstf' id = 'ac'>AC</button>
                 <button class = 'topstf' id = 'delete'>&#9003</button>
             </div>
             <div class = 'num top'>
@@ -36,7 +37,7 @@
                 <button id = "-" class = 'operator'>-</button>
                 <button class = 'btn' id=".">.</button>
                 <button class = 'btn'>0</button>
-                <button id = 'equal' class = 'operator'>=</button>
+                <button id = 'equal' >=</button>
                 <button id = "+" class = 'operator'>+</button>
             </div>
         </div>
