added flex for entire body

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class = "calculatorBody">
             <div class = 'screen'>
                 <div class = 'scr' id="pScreen"></div>
-                <div class = 'scr' id="cScreen" >0</div>
+                <div class = 'scr' id="cScreen" ></div>
             </div>
             <div class = top-btn>
                 <button class = 'topstf' id = 'ac'>AC</button>
